# internal/http/dto.go
@@ -1,0 +1,6 @@
+package http
+
+type LoginRequest struct {
+    Email    string `json:"email" binding:"required,email"`
+    Password string `json:"password" binding:"required"`
+}
